many fixes: partial group styling, cards can be dragged horizontally and vertically, fixed z-index issue with card buttons, fixes to form settings, added to app styling for hovers on card buttons

--- a/jsapp/kobo/stylesheets/partials/_header_and_top_menu.scss
+++ b/jsapp/kobo/stylesheets/partials/_header_and_top_menu.scss
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 6;
     line-height: 40px;
     background-color: #3F3F3F;
     transition: width 150ms, left 150ms;
@@ -55,7 +55,7 @@
     position: fixed;
     top: 40px;
     left: 0;
-    z-index: 5;
+    z-index: 6;
     background-color: #FFF;
     transition: width 150ms, left 150ms;
 
