--- a/jsapp/kobo/stylesheets/partials/form_builder/_form_settings.scss
+++ b/jsapp/kobo/stylesheets/partials/form_builder/_form_settings.scss
@@ -2,9 +2,8 @@
   border:2px solid #D9DDE1;
   float: left;
   background: white;
-  width: 400px;
-  height: 430px;
-  overflow: scroll;
+  width: 430px;
+  height: auto;
   display: none;
   padding:20px;
   font-size: 13px;
